2021-07-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvispc.c: Output text files by "wb" mode.
	(Windows only)

2021-06-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Avoid encoding conversion in ASCII range
	for printing characters with internal-euc/sjis.
	* dvispc.test, tests/put[j].dump.dvi, tests/put[j].txt,
	Makefile.am: Another test files.

2021-06-21  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.test, chkdvifont.test: Minor adjustments.
	* tests/jisx0208.{dvi,txt}, Makefile.am: Another test.

2020-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.{am,in}, common.h, dvispc.c, chkdvifont.c:
	Add a bug report addresse on command line help.
	* chkdvifont.c: Avoid compiler warnings.
	* configure.ac: Version 20200501.

2020-01-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* configure.ac: Version 20200117.

2019-11-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Add -v option for more verbosity.
	For now, only the parameter table of TFM/OFM is dumped.

2019-08-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Show FONTDIR of OFM format.

2019-02-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Forbid too long file name.

2019-02-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Detect new JFM spec.
	* chkdvifont.man, dvispc.man: Add fallback TeX and LaTeX logos.
	* configure.ac: Version 20190206.
	* Makefile.am: Adjusted for new tests.

2018-11-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* configure.ac: Version 20181125.

2018-11-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c, dvispc.man, dvispc-{ja,en}.txt: Better help message.

2018-10-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.test: Add tests for underflow.
	* tests/under.{tex,dvi}, tests/underout.dvi: New tests.
	* Makefile.am: Adjusted.

2018-10-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
