@@ -2,7 +2,7 @@
 
 Copyright (c) 1998-2011 Toshio OSHIMA, Yoshiki OTOBE, Kazunori ASAYAMA.
 Copyright (c) 2017-2018 Hironobu YAMASHITA
-Copyright (c) 2018-     Japanese TeX Development Community
+Copyright (c) 2018-2022 Japanese TeX Development Community
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
