@@ -1,12 +1,12 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl Copyright 2018-2020 Japanese TeX Development Community <issue@texjp.org>
+dnl Copyright 2018-2022 Japanese TeX Development Community <issue@texjp.org>
 dnl
 dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
 dnl   with or without modifications, as long as this notice is preserved.
 dnl
-AC_INIT([dviout-util (TeX Live)], [20200501], [tex-k@tug.org])
+AC_INIT([dviout-util (TeX Live)], [20220409], [tex-k@tug.org])
 AC_PREREQ([2.65])
 AC_CONFIG_SRCDIR([dvispc.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
